<resources>
    <string name="app_name">Gladiator</string>
    <string name="teamless">You haven\'t joined a team yet!\nPress the button to join a team!</string>
    <string name="join_team">Join/Create Team!</string>
    <string name="create_team">Create a Team</string>
    <string name="search_hint">Search for a team</string>
    <string name="req_join">Press here to join the Team!</string>
    <string name="requests"> Pending Requests:</string>
    <string name="members">Active Members</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
