<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
<LinearLayout
    android:id = "@+id/error_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">
    <TextView
        android:id = "@+id/teamless_message"
        android:text="@string/teamless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="gravity"/>
    <Button
        android:id = "@+id/new_team_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_team"
        android:gravity="center"
        android:layout_gravity="center"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id = "@+id/team_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:orientation="vertical">
            <TextView
                android:id="@+id/team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:gravity="center"
                android:textAlignment="gravity"/>
            <TextView
                android:id="@+id/team_stat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"/>
            <Button
                android:id="@+id/req_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/req_join"
                />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id = "@+id/request_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text = "@string/requests"
        android:textSize="20sp"
        android:visibility="gone"/>
    <ListView
        android:id = "@+id/request_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="gravity"
        android:text = "@string/members"
        android:textSize="20sp"
        />
    <ListView
        android:id = "@+id/team_list"
        android:paddingTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
